--- a/WindowsPhone8/WorkTajm/packages.config
+++ b/WindowsPhone8/WorkTajm/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="wp80" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wp80" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="wp80" />
-  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="phone80" />
+  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
+  <package id="WPToolkitTestFx" version="4.2012.11.14" targetFramework="wp80" />
 </packages>
