--- a/WindowsPhone8/WorkTajm/packages.config
+++ b/WindowsPhone8/WorkTajm/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="wp80" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="wp80" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="wp80" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wp80" />
+  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="wp80" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="WPToolkitTestFx" version="4.2012.11.14" targetFramework="wp80" />
