Adding a new customer is synched to backend.

--- a/WindowsPhone8/WorkTajm/WorkTajm.csproj
+++ b/WindowsPhone8/WorkTajm/WorkTajm.csproj
@@ -93,6 +93,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Backend\Json\Customer.cs" />
     <Compile Include="Backend\Json\Project.cs" />
     <Compile Include="Backend\Json\Registration.cs" />
     <Compile Include="Backend\BackendApi.cs" />
