--- a/ios/Worktajm/Podfile
+++ b/ios/Worktajm/Podfile
@@ -1,6 +1,8 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '8.0'
-pod 'SwiftyJSON', :git => "https://github.com/orta/SwiftyJSON", :branch => "podspec"
-pod 'Alamofire', :git => "https://github.com/mrackwitz/Alamofire.git", :branch => "podspec"
+use_frameworks!
+
+pod 'SwiftyJSON', '~> 2.1.3'
+pod 'Alamofire', '~> 1.2'
 
