--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
+    compile files('/Users/jiar/git/worktajm/m-worktajm/Android/libs/logentries-android-2.1.5.jar')
+    compile files('/Users/jiar/git/worktajm/m-worktajm/Android/libs/volley.jar')
 }
