--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion 23
@@ -21,12 +22,30 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+
+    // Android Libs
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
+
+    // Material dialogs
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.0@aar') {
+        transitive = true
+    }
+    // Android data binding libs (beta)
+//    classpath "com.android.tools.build:gradle:1.3.0-beta4"
+//    classpath "com.android.databinding:dataBinder:1.0-rc1"
+
+    // List view helpers
     compile 'com.jaysoyer.lib:advanced-adapters:15.3'
+
+    // Date time utils
     compile 'net.danlew:android.joda:2.8.2'
-//  Local refs (*yuck*)
+
+    //  Local refs (*yuck*)
     compile files('/Users/jiar/git/worktajm/m-worktajm/Android/libs/logentries-android-2.1.5.jar')
     compile files('/Users/jiar/git/worktajm/m-worktajm/Android/libs/volley.jar')
+
+    // Unit tests
+    testCompile 'junit:junit:4.12'
+
 }
